# CMakeList.txt : CMake project for Lab3-Graph, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Lab3-Graph")

# Add source to this project's executable.
add_executable (Lab3-Graph "main.cpp"  "incliude/gpaph.cpp")

# TODO: Add tests and install targets if needed.
